Illustratr: Fix issues with widget block centre alignments.

--- a/illustratr/blocks.css
+++ b/illustratr/blocks.css
@@ -374,6 +374,17 @@ hr.wp-block-separator {
 5.0 Blocks - Widget Blocks
 --------------------------------------------------------------*/
 
+/* General Widget styles */
+
+.wp-block-categories.aligncenter,
+.wp-block-categories.aligncenter ul,
+.wp-block-archives.aligncenter,
+.wp-block-latest-posts.aligncenter,
+.wp-block-latest-comments.aligncenter {
+	list-style-position: inside;
+	text-align: center;
+}
+
 /* Categories */
 
 .wp-block-categories.aligncenter {
