--- a/illustratr/editor-blocks.css
+++ b/illustratr/editor-blocks.css
@@ -811,6 +811,14 @@
 6.0 Blocks - Widgets
 --------------------------------------------------------------*/
 
+/* General Widget styles */
+
+.edit-post-visual-editor [data-align="center"] .wp-block-categories__list,
+.edit-post-visual-editor [data-align="center"] .wp-block-archives,
+.edit-post-visual-editor [data-align="center"] .wp-block-lastest-posts {
+	list-style-position: inside;
+}
+
 /* Categories */
 
 .editor-block-list__block[data-align=right] .wp-block-categories__list,
